# leetcode-c

./: .gitignore  CMakeLists.txt  README.md
algorithms/: 27-remove-element.c  CMakeLists.txt  power-of-two.c  two-sum.c
shell/: word-frequency.sh
shell/tenth-line/: tenth-line.sh
src/: 001_two-sum.c  026_remove-duplicates-from-sorted-array.c  027_remove-element.c  231_power-of-two.c  26-remove-duplicates-from-sorted-array.c  27-remove-element.c  83-remove-duplicates-from-sorted-list.c  CMakeLists.txt
